<resources>
    <string name="app_name">Motion</string>

    <string name="tv_tab_home">首页</string>
    <string name="tv_tab_data">数据</string>
    <string name="tv_tab_mine">我的</string>

    <string name="tv_tab_home_title">帮邦</string>
    <string name="tv_tab_data_title">健康数据</string>

    <string name="tv_home_module_recipe">运动处方</string>
    <string name="tv_home_module_plan">运动计划</string>
    <string name="tv_home_module_medical">健康体检</string>
    <string name="tv_home_module_record">健康档案</string>

    <string name="tv_recipe_grade">处方等级</string>
    <string name="tv_sports_days">运动天数</string>
    <string name="tv_mUpgrade_recipe">升级处方</string>
    <string name="tv_core">核心</string>
    <string name="tv_heart_lung">心肺</string>
    <string name="tv_upper_limb">上肢</string>
    <string name="tv_lower_limbs">下肢</string>
    <string name="tv_toughness">柔韧性</string>
    <string name="tv_bmi">BMI</string>
    <string name="tv_hrrest">安静心率</string>
    <string name="tv_hrr">储备心率</string>
    <string name="tv_mhr">最大心率</string>


    <string name="tv_home_module_site">场地预约</string>
    <string name="tv_home_module_equipment">器材预约</string>
    <string name="tv_home_module_coach">教练预约</string>
    <string name="tv_home_module_curriculum">课程预约</string>
    <string name="tv_home_module_consult">健康咨询</string>
    <string name="tv_home_module_stadium">推荐场馆</string>


    <string name="tv_data_module">数据</string>
    <string name="tv_data_module_intake">消耗摄入</string>
    <string name="tv_data_module_exercise">运动</string>
    <string name="tv_data_module_stamina">体能</string>
    <string name="tv_data_module_constitution">体质</string>

    <string name="tv_data_trend_reporter">报告分析</string>
    <string name="tv_data_loss_overall">今日总消耗</string>
    <string name="tv_data_kilocalorie">千卡</string>
    <string name="tv_data_overall">消耗</string>
    <string name="tv_data_intake">摄入</string>
    <string name="tv_data_diet">饮食</string>
    <string name="tv_data_work">工作</string>
    <string name="tv_data_sleep">睡觉</string>
    <string name="tv_data_motion">运动</string>
    <string name="tv_data_fashion">体闲</string>
    <string name="tv_data_brekker">早餐</string>
    <string name="tv_data_lunch">午餐</string>
    <string name="tv_data_supper">晚餐</string>
    <string name="tv_data_snacks">加餐</string>


    <string name="tv_mine_header_order">订单</string>
    <string name="tv_mine_header_cookies">浏览记录</string>
    <string name="tv_mine_header_resume">个人资料</string>

    <string name="tv_mine_order_list">订单列表</string>

    <string name="tv_mine_module_secure">修改密码</string>
    <string name="tv_mine_module_smscheck">短信验证</string>
    <string name="tv_mine_module_share">分享客户端</string>
    <string name="tv_mine_module_faq">常见问题</string>
    <string name="tv_mine_module_set">设置中心</string>
    <string name="tv_mine_module_feedback">意见反馈</string>
    <string name="tv_mine_module_exit">退出登录</string>

    <string name="tv_mine_user_header">头像</string>
    <string name="tv_mine_user_info">基本信息</string>
    <string name="tv_mine_user_name">昵称</string>
    <string name="tv_mine_user_sex">性别</string>
    <string name="tv_mine_user_man">男</string>
    <string name="tv_mine_user_woman">女</string>
    <string name="tv_mine_user_birthday">出生日期</string>
    <string name="tv_mine_user_birthday_hint">请选择出生日期</string>
    <string name="tv_mine_user_stature">身高</string>
    <string name="tv_mine_user_stature_hint">请输入您的身高</string>
    <string name="tv_mine_user_weight">体重</string>
    <string name="tv_mine_user_weight_hint">请输入您的体重</string>
    <string name="tv_mine_user_name_hint">请输入您的昵称</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="tv_loding">加载中...</string>

    <string name="tv_button_ok">确定</string>

    <!-- 修改密码页面 -->
    <string name="tv_mine_phone">请输入手机号</string>
    <string name="tv_mine_code">请输入验证码</string>
    <string name="tv_mine_get_code">获取验证码</string>
    <string name="tv_mine_old_password">请输入旧密码</string>
    <string name="tv_mine_new_password">请输入新密码</string>
    <string name="tv_mine_password">请再次输入密码</string>
    <string name="tv_mine_updata_more">更多修改方式  ></string>

    <!-- 意见反馈 -->
    <string name="tv_mine_suggestion">请输入您的意见和建议，工作人员会在第一时间进行评估处理。感谢您的热心反馈！</string>
    <string name="_0">0</string>


    <string name="tv_work">工作</string>
    <string name="tv_time">时间</string>
    <string name="tv_sleep">睡眠</string>
    <string name="tv_housewife">家务</string>
    <string name="tv_dailylife">日常生活</string>
    <string name="tv_hint_sport">请输入运动名称</string>


    <!-- 体检 -->
    <string name="tv_screen">筛选</string>
    <string name="tv_select_project">请选择体检项目</string>
    <string name="tv_man">男性</string>
    <string name="tv_woman">女性</string>
    <string name="tv_crowd">适用人群</string>
    <string name="tv_illness">高发疾病</string>

    <string name="tv_retreat">退</string>
    <string name="tv_authority">权</string>
    <string name="tv_change">改</string>
    <string name="tv_after">后</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>
