<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SelectScreenActivity">

    <include android:id="@+id/bar" layout="@layout/ui_title_back"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_mine_user_sex"
                android:layout_margin="@dimen/dp_10"
                android:textColor="@color/colorGradeData"
                android:textSize="@dimen/sp_15"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/tv_man"

                    android:button="@null"
                    android:paddingTop="@dimen/dp_5"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_5"

                    android:background="@drawable/radiobutton_background"
                    android:gravity="center"
                    android:textColor="@color/radiobutton_textcolor"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/tv_woman"

                    android:button="@null"
                    android:paddingTop="@dimen/dp_5"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_5"

                    android:layout_marginStart="@dimen/dp_10"
                    android:background="@drawable/radiobutton_background"
                    android:gravity="center"
                    android:textColor="@color/radiobutton_textcolor"
                    />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/tv_crowd"

                android:layout_margin="@dimen/dp_10"
                android:textColor="@color/colorGradeData"
                android:textSize="@dimen/sp_15"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_crowd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/tv_illness"

                android:layout_margin="@dimen/dp_10"
                android:textColor="@color/colorGradeData"
                android:textSize="@dimen/sp_15"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_illness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_margin="@dimen/dp_20"

        android:text="@string/tv_button_ok"

        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"

        android:background="@drawable/ic_recipe_motion_button"
        />

</RelativeLayout>