<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.IntakeActivity">

    <include layout="@layout/ui_title_back"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_152"
            android:background="@mipmap/healthdatabg"
            />

        <com.shaoyuan.motion.ui.view.EnergyProgressBar
            android:id="@+id/EnergyProgressBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            />

        <TextView
            android:id="@+id/tv_reporter"
            android:layout_width="@dimen/dp_125"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/ic_data_intake_button"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/tv_data_trend_reporter"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_15"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_data_overall"
        android:layout_margin="@dimen/dp_20"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/colorXiaohao"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:id="@+id/rl_motion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        >

        <ImageView
            android:id="@+id/iv_exercise"
            android:layout_width="@dimen/dp_54"
            android:layout_height="@dimen/dp_54"
            android:layout_centerVertical="true"
            android:src="@mipmap/yundong1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_data_module_exercise"
            android:textColor="@color/colorXiaohao"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_exercise"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back1"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_data_loss_overall"
            android:textColor="@color/colorConsume"
            android:textSize="@dimen/sp_13"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#21C7BF"
            android:textSize="@dimen/sp_26"
            android:text="@string/_0"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_data_kilocalorie"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_3"
        android:background="@color/colorEditText"
        android:layout_margin="@dimen/dp_20"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_data_intake"
        android:layout_margin="@dimen/dp_20"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/colorXiaohao"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:id="@+id/rl_diet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        >

        <ImageView
            android:id="@+id/iv_diet"
            android:layout_width="@dimen/dp_54"
            android:layout_height="@dimen/dp_54"
            android:layout_centerVertical="true"
            android:src="@mipmap/yinshi1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_data_diet"
            android:textColor="@color/colorXiaohao"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_diet"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back1"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_data_loss_overall"
            android:textColor="@color/colorConsume"
            android:textSize="@dimen/sp_13"
            android:textStyle="normal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#21C7BF"
            android:textSize="@dimen/sp_26"
            android:text="@string/_0"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_data_kilocalorie"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_3"
        android:background="@color/colorEditText"
        android:layout_margin="@dimen/dp_20"
        />




</LinearLayout>