<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_module_secure"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colorMineText"
            android:drawableStart="@mipmap/ic_mine_module_secure"
            android:drawablePadding="@dimen/dp_20"
            android:text="@string/tv_mine_module_secure"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_more"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_module_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colorMineText"
            android:drawableStart="@mipmap/ic_mine_module_share"
            android:drawablePadding="@dimen/dp_20"
            android:text="@string/tv_mine_module_share"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_more"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_module_faq"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colorMineText"
            android:drawableStart="@mipmap/ic_mine_module_faq"
            android:drawablePadding="@dimen/dp_20"
            android:text="@string/tv_mine_module_faq"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_more"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_module_set"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colorMineText"
            android:drawableStart="@mipmap/ic_mine_module_set"
            android:drawablePadding="@dimen/dp_20"
            android:text="@string/tv_mine_module_set"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_more"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_module_feedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colorMineText"
            android:drawableStart="@mipmap/ic_mine_module_feedback"
            android:drawablePadding="@dimen/dp_20"
            android:text="@string/tv_mine_module_feedback"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_more"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_module_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colorMineText"
            android:drawableStart="@mipmap/ic_mine_module_exit"
            android:drawablePadding="@dimen/dp_20"
            android:text="@string/tv_mine_module_exit"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_more"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

</merge>